# buntspiel

./: Cargo.toml  DEVELOPMENT.md  DOCUMENTATION_STATUS.md  LICENSE  README.md  build.rs
src/: animate.rs  main.rs  neotrellis.rs  pixelblaze.rs  wifi.rs
superpattern/: Cargo.toml  generated.js
superpattern-js/: .gitignore  README.md  package-lock.json  package.json
superpattern-js/example/: .gitignore  generate-superpattern.js
superpattern-js/example/patterns/: # Leuchtturm Regenbogen.epe  # Leuchturm (rotate).epe  # Scanner.epe  # Simple Blink.epe  # Sound Blink.epe  # Stacking.epe  ## OFF.epe  #2D KITT MOD.epe  #Feuerspace2.epe  #Matrix Green Waterfall 3D__.epe  #PL Leuchtturm Rot.epe  #PL Stacking Farbe.epe  #PL Stacking Regebbogen.epe  #Regenbogen.epe  Copy of sound - spectrum analyser 1D_2D.epe
superpattern-js/src/: blend-modes.js  collision-resolver.js  combiner.js  index.js  parser.js  pattern-wrapper.js  transform.js
superpattern-js/test/: combination.test.js  transform.test.js
superpattern/patterns/: # Bunt 3D.epe  # Leuchtturm bunt.epe  # Leuchtturm.epe  # Spiral Dot.epe  #Example_ color hues.epe  #PL Honeycomb 2D_3D.epe  #PL Leuchtturm Farbwechsel.epe  #PL Stacking Fade.epe
superpattern/src/: lib.rs  main.js  pattern_wrapper.js
